2025-09-28T00:55:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18067117762 # 780
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 933 1412 / 949 1428
* notice: next accum: outdated-unq outdated-all / unq all: 934 1413 / 950 1429
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-14] / [2025-09-27]

2025-09-27T00:47:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18052640668 # 779
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-27
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 932 1411 / 948 1427
* notice: next accum: outdated-unq outdated-all / unq all: 933 1412 / 949 1428
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-13] / [2025-09-26]

2025-09-26T00:50:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18024605613 # 778
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-26
* notice: last 14d: unq all: 7 16
* notice: prev accum: outdated-unq outdated-all / unq all: 932 1411 / 947 1426
* notice: next accum: outdated-unq outdated-all / unq all: 932 1411 / 948 1427
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-09-25]

2025-09-25T00:51:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17993573145 # 777