@@ -1,3 +1,12 @@
+2025-09-29T00:52:24Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18082391602 # 781
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-29
+* notice: last 14d: unq all: 7 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 934 1413 / 950 1429
+* notice: next accum: outdated-unq outdated-all / unq all: 935 1414 / 951 1430
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-15] / [2025-09-28]
+
 2025-09-28T00:55:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18067117762 # 780
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-28
